<resources>
    <string name="app_name">ParkingApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_book_parking">Book Parking</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_add_parking">Add Parking</string>
    <string name="menu_parking_history">Parking History</string>
    <string name="menu_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>


</resources>
