<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_book_parking"
            android:icon="@drawable/booking"
            android:title="@string/menu_book_parking" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_add_parking"
            android:icon="@drawable/add_parking"
            android:title="@string/menu_add_parking" />
        <item
            android:id="@+id/nav_parking_history"
            android:icon="@drawable/parking_history"
            android:title="@string/menu_parking_history" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>


</menu>
